--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "datatables.net-bs5": "^1.12.1",
     "datatables.net-dt": "^1.12.1",
     "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "flutterwave-vue3": "^0.0.2",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.1",
